Implementação do YAML

--- a/public/themes/wizard/index.html
+++ b/public/themes/wizard/index.html
@@ -3,7 +3,7 @@
 <div id="loader"><div id="loaderInner" style="direction:ltr;">Carregando.... </div></div>
 
 <div id="appContainer" > 
-    <div id="mainPane" class="easyui-panel" title="Maestro Wizard" style="height: 100%">
+    <div id="mainPane" class="easyui-panel" title="Maestro3 Wizard" style="height: 100%">
         <div id="topPane">
             <div id="menuPane" class="melement" data-manager="href:'{{$manager->getURL('main/menu')}}'"></div>    
         </div>
